--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<p>El concepto de misión refiere a un motivo o una razón de ser por parte de una organización, una empresa o una institución. Este motivo se enfoca en el presente, es decir, es la actividad que justifica lo que el grupo o el individuo está haciendo en un momento dado.</p>
 					</div>
 					<div class="col-sm-6">
-						<img src="img/iconos/mision/vision.png" alt="Icono representgando el sentido de la vista que representa MISION">
+						<img src="img/iconos/mision/vision.png" alt="Icono representgando el sentido de la vista que representa VISION">
 						<h2>Vision</h2>
 						<hr>
 						<p>Por otro lado, la visión de una empresa se refiere a una imagen que la organización plantea a largo plazo sobre cómo espera que sea su futuro, una expectativa ideal de lo que espera que ocurra.</p>
@@ -119,7 +119,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-6">
-						<img src="img/fotos/img-0352.jpg" class="img-responsive" alt="Imagen de tres niñas organizandose para plantar semillas">
+						<img src="img/fotos/img-0352.JPG" class="img-responsive" alt="Imagen de tres niñas organizandose para plantar semillas">
 					</div>
 					<div class="col-sm-6">
 						<h3>Nombre del proyecto</h3>
@@ -179,19 +179,19 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
-						<img src="img/fotos/img-0400.jpg" class="img-responsive" alt="Fotogrfafía de niñor reunidos para plantar semillas">
+						<img src="img/fotos/img-0400.JPG" class="img-responsive" alt="Fotografía de niños reunidos para plantar semillas">
 						<h3>Titulo del post</h3>
 						<p>01.Ene.2016</p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus non veniam minus perspiciatis iusto, sed enim eum quaerat, unde at autem debitis reprehenderit magnam quibusdam rerum laborum atque repellat dolorem.</p>
 					</div>
 					<div class="col-sm-4">
-						<img src="img/fotos/img-0400.jpg" class="img-responsive" alt="">
+						<img src="img/fotos/img-0400.JPG" class="img-responsive" alt="Fotografía de niños reunidos para plantar semillas">
 						<h3>Titulo del post</h3>
 						<p>01.Feb.2016</p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae sint necessitatibus, eaque vel porro possimus optio? Veniam harum, saepe distinctio pariatur. Velit provident aspernatur molestiae, in corrupti debitis, dolore illum!</p>
 					</div>
 					<div class="col-sm-4">
-						<img src="img/fotos/img-0400.jpg" class="img-responsive" alt="">
+						<img src="img/fotos/img-0400.JPG" class="img-responsive" alt="Fotografía de niños reunidos para plantar semillas">
 						<h3>Titulo del post</h3>
 						<p>01.Marzo.2016</p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio facilis quia, dignissimos quae sapiente totam odio animi, sit officiis aperiam blanditiis. Hic autem dignissimos, saepe quisquam, aliquam molestias laboriosam veritatis.</p>
